# agent-rules

./: .gitignore  AGENTS.md  LICENSE  MASTER_PROGRESS.md  README.md  SPEC.md  libprobe.rlib  package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: ci-caching.md
examples/: github-actions.yml
examples/repo-with-rules/: .agent-rules.toml
plans/openrouter-evaluator/: PROGRESS.md  step-01-foundation.md  step-02-openrouter-client.md  step-03-cli-provider-flag.md  step-04-wiring.md  step-05-unit-tests.md  step-06-integration-tests.md
plans/rust-cli/: PROGRESS.md  step-01-scaffold.md  step-02-schema-types.md  step-03-git-parser.md  step-04-resolver-cache.md  step-05-prompt-llm.md  step-06-runner.md  (+2 more)
rust/: Cargo.toml  SPEC-evaluator-protocol.md  progress.md
rust/.config/: nextest.toml
rust/src/: agentic.rs  cache.rs  config.rs  evaluator.rs  git.rs  lib.rs  llm.rs  main.rs  openrouter.rs  parser.rs  progress.rs  prompt.rs  reporter.rs  resolver.rs  runner.rs  schema.rs
rust/src/commands/: cache.rs  check.rs  mod.rs  rules.rs
rust/src/evaluator/: agentic.rs  anthropic.rs  helpers.rs  mod.rs  openrouter.rs
rust/tests/common/: mod.rs
rust/tests/e2e/: check.rs  mod.rs
rust/tests/integration/: cache.rs  check.rs  mod.rs  rules.rs
src/: cache.ts  cli.ts  concurrency.ts  config.ts  git.ts  github.ts  llm.ts  parser.ts  progress.ts  prompt.ts  reporter.ts  resolver.ts  runner.ts  schema.ts  verdict-parser.ts
tests/: cache.test.ts  github.test.ts  llm.test.ts  prompt.test.ts  verdict-parser.test.ts
typescript/: package-lock.json  package.json  vitest.integration.config.ts
(+22 files in other folders)
