[package]
name = "agent-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "process", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
globset = "0.4"
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
owo-colors = "4"
anyhow = "1"
thiserror = "2"
regex = "1"
async-trait = "0.1"
which = "6"

[features]
test-e2e = []

[[bin]]
name = "agent-rules"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
required-features = ["test-e2e"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
